<resources>
    <string name="app_name">Mobile1</string>
    <string name="title_activity_movie_list">movieList</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="to_movie_list">Список фильмов</string>
    <string name="to_add_movie">Добавить фильм</string>

    <string name="save_movie">Сохранить фильм</string>
    <string name="movie_name">Название фильма</string>
    <string name="movie_description">Краткое описание фильма</string>
    <string name="director_name">Имя режиссёра</string>
    <string name="director_surname">Фамилия режиссёра</string>

</resources>