<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddMovie">

    <Button
        android:id="@+id/saveButton"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginBottom="29dp"
        android:background="@color/background"
        android:text="@string/save_movie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/director_surname_field"
        app:layout_constraintVertical_bias="0.16" />

    <EditText
        android:id="@+id/movie_name_field"
        android:layout_width="365dp"
        android:layout_height="46dp"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:hint="@string/movie_name"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="26dp"
        android:textIsSelectable="true"/>

    <EditText
        android:id="@+id/movie_description_field"
        android:layout_width="365dp"
        android:layout_height="46dp"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:hint="@string/movie_description"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/movie_name_field"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="26dp"
        android:textIsSelectable="true"/>

    <EditText
        android:id="@+id/director_name_field"
        android:layout_width="365dp"
        android:layout_height="46dp"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:hint="@string/director_name"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/movie_description_field"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="26dp"
        android:textIsSelectable="true"/>

    <EditText
        android:id="@+id/director_surname_field"
        android:layout_width="365dp"
        android:layout_height="46dp"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:hint="@string/director_surname"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/director_name_field"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="26dp"
        android:textIsSelectable="true"/>


</androidx.constraintlayout.widget.ConstraintLayout>